# FHE-GPT-2

cnn_ckks/: CMakeLists.txt
cnn_ckks/common/: Polynomial.cpp
cnn_ckks/cpu-ckks/single-key/cnn/: cnn_seal.cpp  cnn_seal.h  infer_seal.cpp  infer_seal.h
cnn_ckks/cpu-ckks/single-key/comp/: SEALcomp.cpp  SEALfunc.cpp
cnn_ckks/cpu-ckks/single-key/seal-modified-3.6.6/native/src/seal/: keygenerator.cpp  keygenerator.h
cnn_ckks/run/: run_cnn.cpp
gpt2_ckks/: CMakeLists.txt  build.sh  run_test.sh
gpt2_ckks/gpt2-ckks/single-key/ckks_bootstrapping/: Bootstrapper.cpp
gpt2_ckks/gpt2-ckks/single-key/comp/: SEALcomp.cpp
gpt2_ckks/gpt2-ckks/single-key/gpt2/: CMakeLists.txt  ChebyPoly.cpp  Fold.cpp  IterApprox.cpp  MatrixMul.cpp  PolyApprox.cpp  approx.h  gpt2_seal.cpp  gpt2_seal.h  layers.cpp  matrix_mul.cpp  optimize.cpp  pack.cpp  pack.h  tensor.h  test_util.cpp  test_util.h  util.cpp  util.h
gpt2_ckks/gpt2-ckks/single-key/gpt2/protos/: addressbook.pb.cc  addressbook.pb.h  book.pb  compile_prog.sh  read  read_message.cc  write  write_message.cc
gpt2_ckks/gpt2-ckks/single-key/seal-modified-3.6.6/: CMakeLists.txt
gpt2_ckks/gpt2-ckks/single-key/seal-modified-3.6.6/mylibs/include/SEAL-3.6/seal/util/: config.h
gpt2_ckks/gpt2-ckks/single-key/seal-modified-3.6.6/native/examples/: 2_encoders.cpp  4_ckks_basics.cpp  5_rotation.cpp  CMakeLists.txt  build.sh
gpt2_ckks/gpt2-ckks/single-key/seal-modified-3.6.6/native/tests/: CMakeLists.txt
gpt2_ckks/gpt2-ckks/single-key/seal-modified-3.6.6/native/tests/seal/: evaluator.cpp
gpt2_ckks/network/: CMakeLists.txt  compress_test.cc  secure_inference_client.cc  secure_inference_server.cc
gpt2_ckks/network/header/: CMakeLists.txt  batchpirclient.h  batchpirparams.h  batchpirserver.h  client.h  database_constants.h  network_util.h  pirparams.h  server.h  utils.h
gpt2_ckks/network/src/: CMakeLists.txt  batchpirclient.cpp  batchpirparams.cpp  batchpirserver.cpp  client.cpp  main.cpp  network_util.cpp  pirparams.cpp  server.cpp
gpt2_ckks/protos/: secure_inference.proto
gpt2_ckks/run/: infer_gpt2.cpp  microbenchmark.cpp  run_approx_test.cpp  run_bootstrapping.cpp  run_layer_test.cpp  run_minimal_bootstrap.cpp  run_test.cpp
gpt2_weights/: weights.pb.cc  weights.pb.h  weights.proto  weights_pb2.py
native/src/seal/: ckks.h  evaluator.cpp  evaluator.h
plain_approx/: approx.sh  attn.py  fold.py  full_gpt2.py  gelu.py  gpt2_approx_checkpoint_2.py  iterations.py  layers.py  matrix_mul.py  pack.py  poly.py  pytest.ini  test_attn.py  test_end_to_end.py  test_ff.py  test_layers.py  test_pack.py
result/: resnet20_cifar10_image0.txt
